--- a/containers/nextjs/front-end/app/globals.css
+++ b/containers/nextjs/front-end/app/globals.css
@@ -32,7 +32,7 @@ body {
                    var(--sb-track-color);
 }
 
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   width: var(--sb-size) 
 }
 
@@ -45,4 +45,26 @@ body::-webkit-scrollbar-thumb {
   background: var(--sb-thumb-color);
   border-radius: 10px;
   
-  }
+  } */
+
+  /* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #00224D rgba(128, 128, 128, 0.32);
+}
+
+/* Chrome, Edge, and Safari */
+body::-webkit-scrollbar {
+  width: 15px;
+}
+
+body::-webkit-scrollbar-track {
+  background: red;
+  border-radius: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: green;
+  border-radius: 14px;
+  border: 3px solid blue;
+}
